prns-host/bindings/swift/Sources/CPrnsHost/include/prns_host.h

typedef uint32_t PrnsStatus;
typedef uint32_t PrnsResourceCompressionKind;
/*
 * Ownership and lifetime contract:
 * - Input byte/string views and configuration arrays are borrowed only for
 *   the duration of the call; prns_host_create copies all retained data.
 * - Every non-null opaque handle returned through an out parameter has one
 *   owner and must be passed exactly once to its matching *_release function.
 * - Release and interrupt functions accept NULL and do nothing. Functions
 *   with status results reject other required NULL arguments.
 * - A release must not race another operation on the same handle. Interrupt
 *   may race its matching wait; release only after that wait has returned.
 * - UINT32_MAX is the infinite timeout for command, event-stream, and
 *   supplied-Pipe request waits.
 * - Supplied-Pipe readiness is only a wake hint. Consumers pull an owned
 *   open-request handle, then provide or decline it exactly once.
 * - A successful descriptor-provide call consumes every non-negative
 *   descriptor, including one rejected because closure won a race.
 * - All exported calls contain Rust panics and report PRNS_STATUS_PANIC where
 *   the function has a status result; no Rust unwinding crosses this ABI.
 */

typedef struct PrnsHost PrnsHost;
typedef struct PrnsIssuedCommand PrnsIssuedCommand;
typedef struct PrnsResourceUpload PrnsResourceUpload;
typedef struct PrnsByteView {
    const uint8_t *data;
    size_t length;
} PrnsByteView;
PRNS_HOST_API PrnsStatus prns_host_begin_resource_upload(PrnsHost *host, PrnsByteView link_id, uint64_t declared_length, const PrnsByteView *packed_metadata, PrnsResourceCompressionKind compression_kind, PrnsResourceUpload **out_value);
PRNS_HOST_API PrnsStatus prns_resource_upload_write(PrnsResourceUpload *resource_upload, PrnsByteView chunk);
PRNS_HOST_API PrnsStatus prns_resource_upload_finish(PrnsResourceUpload *resource_upload, PrnsIssuedCommand **out_value);
PRNS_HOST_API void prns_resource_upload_abort(PrnsResourceUpload *resource_upload);
PRNS_HOST_API void prns_resource_upload_release(PrnsResourceUpload *resource_upload);